--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "util": "~0.10.3",
     "slugify": "~0.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^1.10.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
